# mongodb-tests

./: Readme.md  docker-compose.yml  pyproject.toml
normalized_schemas/: mongodb-insert-many.py  mongodb-queries.py
scripts/: format.sh
